--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,138 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Vollkorn&family=Work+Sans&display=swap");
 
+:root {
+    --font-display: "Playfair Display", serif;
+    --font-serif: "Vollkorn", serif;
+    --font-sans: "Work Sans", sans-serif;
+    --color-accent: #7030ff;
+    --color-background: #f0f0f0;
+    --color-text: #101010;
+}
+
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    color: var(--color-text);
+}
+
+.material-symbols-outlined {
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 }
 
 html {
-    color-scheme: light dark;
+    /* color-scheme: light dark; */
+    background-color: var(--color-background);
 }
 
 h1 {
     font-family: "Playfair Display", serif;
 }
 
-header {
+.header-top {
+    background-color: var(--color-background);
+    position: sticky;
+    top: 0;
+    height: 4rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 2em;
-    border-bottom: 2px solid #000;
+    padding: 0 3rem;
+    border-bottom: 1px solid #000;
+    margin-bottom: 2rem;
 }
 
-#container {
+.container-search {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #000;
+    height: 2.5rem;
+    width: 45rch;
+    border-radius: 2rem;
+    padding: 0 1.5rem;
+}
+
+.container-search:focus-within {
+    box-shadow: 0 0 0.5rem 0.25rem var(--color-accent);
+}
+
+#search-input {
+    border: none;
+    background: transparent;
+    font-family: var(--font-sans);
+    font-size: 1.125rem;
+    flex-grow: 1;
+}
+
+#search-input:focus {
+    outline: none;
+}
+
+#search-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+}
+
+#search-button:hover {
+    transition: 0.25s;
+    transition-property: background-color;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+.container-status {
+    margin: 0 0 2rem 2.5rem;
+}
+
+.status-message {
+    font-family: var(--font-serif);
+}
+
+.container-artworks {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
-figure {
-    padding: 2em;
-    border: 2px solid #000;
-    box-shadow: 0.5em 0.5em rgba(0, 0, 0, 0.5);
-    text-align: center;
+.artwork {
+    /* margin: 1rem;
+    padding: 1rem; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .picture {
     height: 400px;
     margin-bottom: 2em;
 }
-
-span {
-    line-height: 2;
+.information {
+    height: 7.5rem;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     text-align: center;
-    font-family: "Vollkorn", serif;
 }
 
 .title {
+    font-family: var(--font-serif);
     font-style: italic;
     font-size: 1.2em;
 }
 
 .author {
+    font-family: var(--font-serif);
     font-weight: bold;
+}
+
+.year {
+    font-family: var(--font-sans);
 }
