--- a/css/style.css
+++ b/css/style.css
@@ -102,8 +102,8 @@ h1 {
 }
 
 .artwork {
-    /* margin: 1rem;
-    padding: 1rem; */
+    padding: 1rem;
+    margin: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -113,6 +113,7 @@ h1 {
     height: 400px;
     margin-bottom: 2em;
 }
+
 .information {
     height: 7.5rem;
     width: 75%;
