--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Flow+Circular&family=Playfair+Display&family=Vollkorn&family=Work+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Vollkorn&family=Work+Sans&display=swap");
 
 :root {
     --font-display: "Playfair Display", serif;
     --font-serif: "Vollkorn", serif;
     --font-sans: "Work Sans", sans-serif;
-    --font-placeholder: "Flow Circular", cursive;
     --color-accent: #7030ff;
     --color-background: #f0f0f0;
     --color-text: #101010;
@@ -21,6 +20,10 @@ a {
     text-decoration: none;
 }
 
+main {
+    margin: 2rem 3rem;
+}
+
 .material-symbols-outlined {
     font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
     user-select: none;
@@ -29,6 +32,10 @@ a {
 .filled {
     font-variation-settings: "FILL" 1;
     color: var(--color-accent);
+}
+
+.display-flex {
+    display: flex;
 }
 
 html {
@@ -50,7 +57,6 @@ h1 {
     justify-content: space-between;
     padding: 0 3rem;
     border-bottom: 1px solid #000;
-    margin-bottom: 2rem;
 }
 
 .container-search {
@@ -94,11 +100,12 @@ h1 {
 
 #search-button:hover {
     transition: 0.25s;
-    transition-property: background-color;
     background-color: rgba(0, 0, 0, 0.15);
 }
 
 .container-status {
+    display: none;
+    align-items: center;
     margin: 0 0 2rem 2.5rem;
 }
 
@@ -108,18 +115,43 @@ h1 {
 }
 
 .spinner {
-    visibility: hidden;
+    display: flex;
     border: 2px solid var(--color-accent);
-    border-top: 2px solid var(--color-background);
+    border-top: 2px solid transparent;
     border-radius: 50%;
     width: 1rem;
     height: 1rem;
-    animation: loading 1s linear infinite;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loader {
+    display: none;
+    width: 100%;
+    height: 90vh;
+    border-radius: 1em;
+    background: var(--color-background);
+    background-image: linear-gradient(
+        90deg,
+        transparent,
+        var(--color-accent),
+        transparent
+    );
+    background-size: 200%;
+    animation: loading 5s linear infinite;
 }
 
 @keyframes loading {
+    0% {
+        background-position: 0 0;
+    }
     100% {
-        transform: rotate(360deg);
+        background-position: 200% 0;
     }
 }
 
