--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ h1 {
     width: 1rem;
     height: 1rem;
     animation: spin 1s linear infinite;
+    z-index: -1;
 }
 
 @keyframes spin {
@@ -195,6 +196,10 @@ h1 {
 
 .display-flex {
     display: flex;
+}
+
+.visibility-visible {
+    visibility: visible;
 }
 
 #search-button:disabled,
