--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --font-serif: "Vollkorn", serif;
     --font-sans: "Work Sans", sans-serif;
     --color-accent: #7030ff;
-    --color-favorite: #e60000;
+    --color-favorite: #ff3070;
     --color-background: #f0f0f0;
     --color-text: #101010;
 }
