--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ select {
     background-color: var(--color-background);
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 99;
     height: 4rem;
     display: flex;
     align-items: center;
@@ -167,14 +167,14 @@ select {
     padding: 0 2rem;
 }
 
-.button-theme {
-    border: 1px solid;
+.button-round {
+    border: 1px solid var(--color-text);
     border-radius: 50%;
     height: 2.5rem;
     width: 2.5rem;
 }
 
-.button-theme:hover span {
+.button-round:hover span {
     text-shadow: 0 0 0.5rem var(--color-accent), 0 0 1rem var(--color-accent),
         0 0 1.5rem var(--color-accent);
 }
@@ -386,6 +386,38 @@ select {
 }
 
 /*#endregion  */
+
+/*#region || Footer */
+footer {
+    text-align: center;
+    font-family: var(--font-serif);
+    font-size: small;
+    padding: 2rem;
+}
+
+footer span {
+    font-family: var(--font-serif);
+    font-size: 1rem;
+}
+
+footer a {
+    color: var(--color-accent);
+    font-family: var(--font-serif);
+}
+
+/*#endregion */
+
+/*region || Back to top*/
+.back-to-top {
+    display: none;
+    position: sticky;
+    bottom: 5.25rem;
+    left: calc(100% - 15rem);
+    place-self: end;
+    z-index: 2;
+    background-color: var(--color-background);
+}
+/*#endregion*/
 
 /*#region || Detail View */
 
