--- a/css/style.css
+++ b/css/style.css
@@ -470,7 +470,7 @@ footer a {
 /*#region || Detail View */
 
 .container-back {
-    margin: 2rem 0;
+    margin: 2.5rem 0 4rem 0;
 }
 
 #button-back {
@@ -486,19 +486,34 @@ footer a {
     grid-gap: 2rem;
 }
 
-.detail-picture {
-    height: 65vh;
+.detail-image {
+    height: 70vh;
     width: 100%;
     object-fit: scale-down;
 }
 
-.artwork-detail a {
+.image-link {
     cursor: zoom-in;
+}
+
+.detail-info {
+    height: 70vh;
+    padding: 2rem;
+    width: 100%;
 }
 
 .detail-info h2 {
     font-family: var(--font-serif);
     text-align: center;
+    margin-bottom: 2rem;
+}
+
+.detail-properties dt {
+    font-weight: bold;
+}
+
+.detail-properties dd {
+    margin-left: 1rem;
 }
 
 /*#endregion  */
