--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ footer a {
 }
 
 .detail-image {
-    height: 70vh;
+    height: 65vh;
     width: 100%;
     object-fit: scale-down;
 }
@@ -497,9 +497,12 @@ footer a {
 }
 
 .detail-info {
-    height: 70vh;
+    height: 65vh;
     padding: 2rem;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .detail-info h2 {
@@ -508,12 +511,20 @@ footer a {
     margin-bottom: 2rem;
 }
 
-.detail-properties dt {
+.detail-property dt {
     font-weight: bold;
+    align-items: end;
 }
 
-.detail-properties dd {
-    margin-left: 1rem;
+.detail-property dd {
+    text-align: end;
+}
+
+.detail-property {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    border-bottom: 1px solid var(--color-text);
 }
 
 /*#endregion  */
