--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,9 @@ select {
 /* Logo and title */
 
 .header-title {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
     width: 14rem;
 }
 
@@ -172,6 +175,15 @@ select {
     align-items: center;
     gap: 0.5rem;
     padding: 0 2rem;
+}
+
+.link-favorites:hover p {
+    text-decoration: underline;
+}
+
+.link-favorites:hover span {
+    text-shadow: 0 0 0.5rem var(--color-favorite),
+        0 0 1rem var(--color-favorite), 0 0 1.5rem var(--color-favorite);
 }
 
 .button-round {
@@ -488,13 +500,14 @@ footer a {
 .container-detail {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    grid-gap: 2rem;
+    gap: 2rem 4rem;
+    align-items: center;
 }
 
 .detail-image {
     height: 65vh;
     width: 100%;
-    object-fit: scale-down;
+    object-fit: contain;
 }
 
 .image-link {
@@ -510,10 +523,23 @@ footer a {
     justify-content: space-evenly;
 }
 
-.detail-info h2 {
+.detail-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+
+.detail-header h2 {
     font-family: var(--font-serif);
-    text-align: center;
-    margin-bottom: 2rem;
+    max-width: 75%;
+}
+
+.detail-properties {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .detail-property dt {
@@ -528,8 +554,17 @@ footer a {
 .detail-property {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 2rem;
-    border-bottom: 1px solid var(--color-text);
+    padding-bottom: 1rem;
+    border-bottom: 1px solid var(--color-disabled);
+}
+
+@media (max-width: 1200px) {
+    .detail-image {
+        height: auto;
+    }
+    .detail-info {
+        height: auto;
+    }
 }
 
 /*#endregion  */
